--- a/6-python-clean-code/requirements.txt
+++ b/6-python-clean-code/requirements.txt
@@ -1,6 +1,7 @@
 alabaster==0.7.16
 asttokens==2.4.1
 Babel==2.14.0
+black==24.3.0
 cairocffi==1.6.1
 CairoSVG==2.7.1
 certifi==2024.2.2
@@ -29,6 +30,8 @@ mergedeep==1.3.4
 mkdocs==1.5.3
 mkdocs-material==9.5.17
 mkdocs-material-extensions==1.3.1
+mypy==1.9.0
+mypy-extensions==1.0.0
 packaging==24.0
 paginate==0.5.6
 parso==0.8.3
@@ -56,6 +59,7 @@ sphinxcontrib-qthelp==1.0.7
 sphinxcontrib-serializinghtml==1.1.10
 stack-data==0.6.3
 tinycss2==1.2.1
+tomli==2.0.1
 traitlets==5.14.2
 typing_extensions==4.10.0
 urllib3==2.2.1
